# terra-guard-ai-digikey-make-one-2026

./: .gitignore  CLAUDE.md  README.md
3d-models/: craw-small1.stl  craw-small2.stl  craw1.3mf  craw1.stl  craw2.stl
3d-models/enclosure/: terra-guard-box-bottom.stl  terra-guard-box-top.stl  terra-guard-camera-joint.stl
dataset/raw/: sample_000000.npz  sample_000001.npz  sample_000002.npz  sample_000003.npz  sample_000004.npz  sample_000005.npz  sample_000006.npz  sample_000007.npz  sample_000008.npz  sample_000009.npz  sample_000010.npz  sample_000011.npz  sample_000012.npz  sample_000013.npz  sample_000014.npz  sample_000015.npz  sample_000016.npz  sample_000017.npz  sample_000018.npz  sample_000019.npz  sample_000020.npz  sample_000021.npz  sample_000022.npz  sample_000023.npz  sample_000024.npz  sample_000025.npz  sample_000026.npz  sample_000027.npz  sample_000028.npz  sample_000029.npz  sample_000030.npz  sample_000031.npz  sample_000032.npz  sample_000033.npz  sample_000034.npz  sample_000035.npz  sample_000036.npz  sample_000037.npz  sample_000038.npz  sample_000039.npz  (+2495 more)
docs/: HANDOFF.md  README.md  dataset.md  demo.md  dev-skill.md  firmware.md  hardware.md  ml-model.md  overview.md  roadmap.md  sensor-processing.md
tools/: distance_viewer.py  dual_viewer.py  dual_viewer_web.py  fps_meter.py  pyproject.toml  thermal_viewer.py
tools/ml/: build_trainset.py  collect_dataset.py  diag_live_vs_tflite.py  evaluate_model.py  make_model_data_h.py  make_test_model.py  neutron_convert.sh  requirements.txt  split_holdout.py  test_foreground_detect.py  train_model.py
(+47 files in other folders)
